06Sep13=======================================================================
1. Fixed sh/contest so that it works again. How it ever worked at all is
   a bit of a mystery. Now possible to type sh/cont dec or sh/cont dec 2013
   (with month and year in any order). Please comment out any $contest_host
   or $contest_url variables you may have in /spider/local/Internet.pm (if
   you have one, that is). It will not work with the previous values.
2. Added CTY2308 prefix changes.
3. Added (back) internal function support inside commands. This allows
   commands to create functions inside the <cmd_name>.pl files. There are
   now also standard function names that can do special things.
24Jul13=======================================================================
1. Alter default node address in client.c from "localhost" to "127.0.0.1".
21Jul13=======================================================================
1. Fix Msg.pm to allow IPV6 addresses again (how did it ever work?).
2. Add latest CTY2307 prefix changes.
3. Other changes including (some) more prefix files, 4mm band data and 
   DXSql/Pg.pm
4. Add ip address in links.pl
31May12=======================================================================
1. Added CTY2210 prefix changes
29May12=======================================================================
1. Added CTY2209 prefix changes
10Apr12=======================================================================
1. Added DXSql/Pg postgres Spot collection interface from Wijnand PD0MZ. 
2. Add CTY2206 prefix changes
13Mar12=======================================================================
1. add CTY2204 prefix changes + new wpxloc.raw
12Mar12=======================================================================
1. Check database operations on MySQL/SQlite3.
2. Add ipaddr field to spot table if not present.
3. Add ipaddr field from PC61 to database stored spots.
09Mar12=======================================================================