@@ -11,7 +11,7 @@ use vars qw($version $subversion $build $gitversion);
 
 $version = '1.55';
 $subversion = '0';
-$build = '130';
-$gitversion = 'cc83de0';
+$build = '131';
+$gitversion = '89eaa67';
 
 1;
